# ChangeLog for dev-java/caucho-services
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/caucho-services/ChangeLog,v 1.9 2007/11/01 20:18:59 betelgeuse Exp $

  01 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
  -caucho-services-2.1.12.ebuild, -caucho-services-2.1.12-r1.ebuild:
  Move SLOT 2.1 ebuilds to java-overlay as nothing in the main tree needs them
  any more.

  24 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org> Manifest:
  Removed java gen 1 ebuild

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  -caucho-services-3.0.8.ebuild:
  Dropped earlier revision with equivalent keywords.

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  caucho-services-3.0.8-r1.ebuild:
  Stabilized on amd64 (see bug #155622).

  23 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  caucho-services-3.0.8-r1.ebuild:
  stable x86, bug #155622

*caucho-services-3.0.8-r1 (04 Jul 2006)
*caucho-services-2.1.12-r1 (04 Jul 2006)

  04 Jul 2006; Joshua Nichols <nichoj@gentoo.org>
  +caucho-services-2.1.12-r1.ebuild, +caucho-services-3.0.8-r1.ebuild:
  Revision bump to support new Java system.

  30 Nov 2005; <nichoj@gentoo.org> caucho-services-2.1.12.ebuild,
  caucho-services-3.0.8.ebuild:
  Added ~amd64 keyword (bug #110369)

*caucho-services-3.0.8 (22 Oct 2005)

  22 Oct 2005; Petteri Räty <betelgeuse@gentoo.org>
  +caucho-services-3.0.8.ebuild:
  Added caucho-services from hessian-3.0.8.

*caucho-services-2.1.12 (22 Oct 2005)

  22 Oct 2005; Petteri Räty <betelgeuse@gentoo.org> +metadata.xml,
  +caucho-services-2.1.12.ebuild:
  Initial addition by myself. Splitted from dev-java/hessian-2.1.12.
