@@ -1,4 +1,5 @@
 DIST caucho-services-3.0.8.tar.bz2 6992 RMD160 3fb1f565edb35f824103d389135c8fd9e724f350 SHA1 9e5556dfa729feee686bd007cb611ef5435029fd SHA256 efbd2922a6c94666ba75b3f10ef332f272651a4c758e5d136450d0fde677a0cb
 EBUILD caucho-services-3.0.8-r1.ebuild 913 RMD160 6f46296a819eb684511407f803bc105d37790474 SHA1 ee8b90c417c6ff467f84be282cda9d4a6ce092e1 SHA256 7993cb8e8bd1183502bd8c0925715a1efb6df50646b6eb50b635f77aa608efef
-MISC ChangeLog 1680 RMD160 08c6aabdb5b79c4ad9b424d21c6cbae238d04c8e SHA1 6c6da79d15cecdb16c262a79cb8d0db13cbb9190 SHA256 f8e352b917042f0afaa116aa91abb022de0a68f2a80216c57904b98b8b646fef
+EBUILD caucho-services-3.0.8-r2.ebuild 873 RMD160 d8b18494997534a6e7c43104d4430b0bbbd909ed SHA1 9365980d0461cf4e475c97953b3a71b53a1e894d SHA256 966a5ca00d94607099dee8f984bd85bedebaf40dbe73a17683225e253d02122f
+MISC ChangeLog 1911 RMD160 2673c2ceb8fdf51d83247fde8d4e7caeb362efc7 SHA1 742aa6284a482a4ab62e9457a2fc703691059ec0 SHA256 61b47fcf8ae6834d9c2d70fa9b89803c9568751836061824bcdee3a4c7959dd7
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
