@@ -1,0 +1,34 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/caucho-services/caucho-services-3.0.8-r2.ebuild,v 1.1 2008/02/14 02:54:52 wltjr Exp $
+
+EAPI=1
+JAVA_PKG_IUSE="doc source"
+inherit java-pkg-2 java-ant-2
+
+DESCRIPTION="The com.caucho.services package used by dev-java/hessian and dev-java/burlap."
+HOMEPAGE="http://www.caucho.com/"
+SRC_URI="mirror://gentoo/${P}.tar.bz2"
+
+LICENSE="Apache-1.1"
+SLOT="3.0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+CDEPEND="java-virtuals/servlet-api:2.3"
+
+RDEPEND=">=virtual/jre-1.4
+	${CDEPEND}"
+DEPEND=">=virtual/jdk-1.4
+	${CDEPEND}"
+
+src_compile() {
+	eant jar -Dservletapi=$(java-pkg_getjars servlet-api-2.3) $(use_doc)
+}
+
+src_install() {
+	java-pkg_dojar dist/${PN}.jar
+
+	use doc && java-pkg_dohtml -r dist/doc/api
+	use source && java-pkg_dosrc src/*
+}
