@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/caucho-services
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/caucho-services/ChangeLog,v 1.9 2007/11/01 20:18:59 betelgeuse Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/caucho-services/ChangeLog,v 1.10 2008/02/14 02:54:52 wltjr Exp $
+
+*caucho-services-3.0.8-r2 (14 Feb 2008)
+
+  14 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  +caucho-services-3.0.8-r2.ebuild:
+  Switched to java-virtuals/servlet-api, set EAPI=1 and switched to slot deps.
+  Set JAVA_PKG_IUSE.
 
   01 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
   -caucho-services-2.1.12.ebuild, -caucho-services-2.1.12-r1.ebuild:
